<resources>
    <string name="app_name">0327interface</string>
    <string name="head_info">食品追蹤查詢</string>
    <string name="search_in">搜尋</string>
    <string name="pigfor">data</string>
    <string name="textview">TextView</string>
    <string name="button_a">商家請點我註冊登入</string>
    <string name="loginhead">商家專用登入/註冊</string>
    <string name="emailinfo">請輸入email</string>
    <string name="userinfo">請輸入使用者名稱</string>
    <string name="password">請輸入密碼</string>
    <string name="buttomB">非商家使用者請點我返回主頁</string>
    <string name="buttonc">點我登入</string>
    <string name="buttonD">點我註冊</string>
    <string name="betainfo">版本號1.00001</string>
    <string name="productname">請輸入產品名稱</string>
    <string name="meatfrom">請輸入肉品產地</string>
    <string name="contentdata">請輸入聯繫方式</string>
    <string name="productheader">產品輸入頁面</string>
    <string name="name">Name</string>
    <string name="button0">點我進行掃碼</string>
    <string name="TV" />
    <string name="TVinfo">顯示結果</string>
    <string name="buttonback">送出資料並返回主頁面</string>
    <string name="btn_A">btn_A</string>
    <string name="user_login">一般使用者點我註冊登入</string>
    <string name="user_login_main">使用者登入</string>
    <string name="comany_list_main">廠商產品清單</string>
    <string name="input_data_button">點擊新增產品資訊</string>
    <string name="company_login">登入</string>
    <string name="login_head">廠商登入介面</string>
    <string name="register_head">廠商註冊介面</string>
    <string name="register_username">請輸入帳號</string>
    <string name="register_email">請輸入e_mail</string>
    <string name="register_password">請輸入密碼</string>
    <string name="register_password_correct">請確認密碼</string>
    <string name="register_button">註冊</string>
    <string name="product_from_where">產品產地</string>
    <string name="produce_ingredient">產品成分</string>
    <string name="product_ingredient">請輸入產品成分</string>
    <string name="meat_from">請輸入肉品產地</string>
    <string name="product_additives">請輸入產品添加物</string>
    <string name="_1231564654">1231564654</string>
    <string name="betainfo0522">版本號1.0004</string>

</resources>